--- a/TreeTracker/UI/Views/Messaging/ChatList/ChatList.storyboard
+++ b/TreeTracker/UI/Views/Messaging/ChatList/ChatList.storyboard
@@ -16,9 +16,24 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aOp-Rr-UMb">
+                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="aOp-Rr-UMb" secondAttribute="bottom" id="5FW-WE-nTV"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="aOp-Rr-UMb" secondAttribute="trailing" id="H37-Rs-qij"/>
+                            <constraint firstItem="aOp-Rr-UMb" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="NeB-wD-N8h"/>
+                            <constraint firstItem="aOp-Rr-UMb" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="fUt-b5-f0V"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="chatListTableView" destination="aOp-Rr-UMb" id="4iO-xn-0sz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
