--- a/TreeTracker/UI/Views/Messaging/ChatList/Cell/ChatListTableViewCell.xib
+++ b/TreeTracker/UI/Views/Messaging/ChatList/Cell/ChatListTableViewCell.xib
@@ -10,22 +10,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="130" id="KGk-i7-Jjw" customClass="ChatListTableViewCell" customModule="TreeTracker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="ChatListTableViewCell" customModule="TreeTracker" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pJJ-TQ-trK">
-                        <rect key="frame" x="20" y="10" width="110" height="110"/>
+                        <rect key="frame" x="20" y="10" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="110" id="MDt-aV-H7Z"/>
-                            <constraint firstAttribute="width" constant="110" id="xh5-QN-wbt"/>
+                            <constraint firstAttribute="width" constant="100" id="1Ut-kM-Kzy"/>
+                            <constraint firstAttribute="height" constant="100" id="Buc-V0-45Q"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNm-U8-pHW">
-                        <rect key="frame" x="150" y="54.666666666666657" width="150" height="21"/>
+                        <rect key="frame" x="136" y="49.666666666666664" width="164" height="20.999999999999993"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -43,7 +43,7 @@
                     <constraint firstItem="aNm-U8-pHW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="8c4-0P-xIA"/>
                     <constraint firstItem="B0b-HE-Jv7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="EFv-eb-rt0"/>
                     <constraint firstAttribute="trailing" secondItem="aNm-U8-pHW" secondAttribute="trailing" constant="20" id="Ize-Ap-Wo4"/>
-                    <constraint firstItem="aNm-U8-pHW" firstAttribute="leading" secondItem="pJJ-TQ-trK" secondAttribute="trailing" constant="20" id="XyW-PQ-sDZ"/>
+                    <constraint firstItem="aNm-U8-pHW" firstAttribute="leading" secondItem="pJJ-TQ-trK" secondAttribute="trailing" constant="16" id="XyW-PQ-sDZ"/>
                     <constraint firstItem="pJJ-TQ-trK" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="e9y-JN-XF6"/>
                     <constraint firstAttribute="trailing" secondItem="B0b-HE-Jv7" secondAttribute="trailing" constant="15" id="nQQ-MH-ALP"/>
                 </constraints>
@@ -54,7 +54,7 @@
                 <outlet property="chatImage" destination="pJJ-TQ-trK" id="gpq-pw-yux"/>
                 <outlet property="chatTitle" destination="aNm-U8-pHW" id="WSg-9I-dop"/>
             </connections>
-            <point key="canvasLocation" x="177.09923664122135" y="64.788732394366207"/>
+            <point key="canvasLocation" x="175.57251908396947" y="64.788732394366207"/>
         </tableViewCell>
     </objects>
 </document>
